made papi softdepend

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: JustAnotherMinecraftDiscordIntegration
 version: '${project.version}'
 main: me.palkercode.jamdi.JAMDI
 api-version: 1.19
+
+softdepend: [PlaceholderAPI]
